[gd_scene load_steps=3 format=3 uid="uid://dbflr35hkbbsi"]

[ext_resource type="Script" uid="uid://crimggkb8irum" path="res://settings_menu/components/screen_space_reflections.gd" id="1_ds2ss"]
[ext_resource type="PackedScene" uid="uid://pva2tkjpsaxa" path="res://settings_menu/components/slider_with_value/slider_with_value.tscn" id="2_mdj25"]

[node name="ScreenSpaceReflections" type="GridContainer"]
offset_right = 412.0
offset_bottom = 50.0
columns = 2
script = ExtResource("1_ds2ss")

[node name="SSRLabel" type="Label" parent="."]
layout_mode = 2
text = "SSR"

[node name="SSROptions" type="OptionButton" parent="."]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1

[node name="SSRStepsLabel" type="Label" parent="."]
visible = false
layout_mode = 2
text = "SSR Steps"

[node name="SSRStepsSlider" parent="." instance=ExtResource("2_mdj25")]
visible = false
layout_mode = 2
slider_range_min = 2.0
slider_range_max = 128.0
slider_starting_value = 32.0
slider_steps = 2.0
rounded = true

[connection signal="item_selected" from="SSROptions" to="." method="_on_ssr_options_item_selected"]
[connection signal="slider_value_changed" from="SSRStepsSlider" to="." method="_on_screen_space_reflections_quality_slider_slider_value_changed"]
